--- a/templates/index.html
+++ b/templates/index.html
@@ -2,35 +2,30 @@
 {% extends 'base.tmpl' %}
 {% block title %}Search{% endblock %}
 {% block body %}
-	<div style="font-size: 400%; text-align: center; margin-top: 4rem; margin-bottom: 1rem;">
-	{% include 'logo.tmpl' %}
-	</div>
-	<div>
-	{% include 'search_bar.tmpl' %}
-	</div>
-	{% if debug %}
-	<h3 class="mt-3">Debug:</h3>
-	<div class="row">
-		<div class="col-4">
-			<ul>
-		<li> <a href="/debug:users">/debug:users</a> </li>
-		<!--<li> <a href="/debug:populate">/debug:populate</a> </li>
-		<li> <a href="/debug:clear">/debug:clear</a> </li>
-		<li> <a href="#" onclick="fetch('/debug:restart')">/debug:restart</a> (+refresh) </li>-->
-	</ul>
+<div class="row">
+	<div class="col">
+		<div style="font-size: 500%; text-align: center; margin-top: 10%; margin-bottom: 1rem;">
+			{% include 'logo.tmpl' %}
 		</div>
-		<div class="col-4">
-	<ul>
-		{% if user %}
-		<li> <a href="/friends">/friends</a> </li>
-		<li> <a href="/comments">/comments</a> </li>
-		<li> <a href="/shared">/shared</a> </li>
-		<li> <a href="/notifications">/notifications</a> </li>
-		<li> <a href="/recent">/recent</a> </li>
-		<!--<li> <a href="/personal">/personal</a> </li>-->
+		<div>
+			{% include 'search_bar.tmpl' %}
+		</div>
+		{% if debug %}
+		<div>
+		<!--<div class="row">-->
+		<p>
+		Debug: 
+			{% for link in ['/debug:users'] %}
+				&nbsp;&nbsp;<a href="{{ link }}">{{ link }}</a>
+			{% endfor %}
+			{% if user %}
+				{% for link in ['/logout', '/friends', '/comments', '/shared', '/notifications', '/recent', '/personal'] %}
+					&nbsp;&nbsp;<a href="{{ link }}">{{ link }}</a>
+				{% endfor %}
+			{% endif %}
+		</p>
+		</div>
 		{% endif %}
-	</ul>
-		</div>
 	</div>
-	{% endif %}
+</div>
 {% endblock body %}
