--- a/templates/watch.html
+++ b/templates/watch.html
@@ -10,7 +10,7 @@
 							type="text/html" 
 							width="640" 
 							height="390"
-							src="http://www.youtube-nocookie.com/embed/{{ videoId }}?rel=0&showinfo=0"
+							src="https://www.youtube-nocookie.com/embed/{{ videoId }}?rel=0&showinfo=0"
 							frameborder="0"
 							allow="autoplay"
 							allowfullscreen
