add basic logging, configurable db url

--- a/templates/topbar.tmpl
+++ b/templates/topbar.tmpl
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-light">
-	<a class="navbar-brand" href="/"> {% if not nologo %} {% include 'logo.tmpl' %} {% endif %}<span class="logo-text">How-to-App </span></a>
+	<a class="navbar-brand" href="/"> {% if not nologo %} {% include 'logo.tmpl' %} {% endif %}<span class="logo-text">How-To-App </span></a>
 	{% if user %}
 	<div class="user">
 		<a href="/personal"><img class="user-picture-sm" src="{{ user['picture'] }}">
