--- a/templates/comment_form.tmpl
+++ b/templates/comment_form.tmpl
@@ -7,7 +7,7 @@
 				<textarea id="text" name="text" class="form-control" rows="3">{{ text }}</textarea>
 			</div>
 			<button type="submit" class="btn btn-primary"><i class="fas fa-pen"></i> Save</button>
-			<button type="button" stt-target="text" class="ml-1 stt-button btn btn-outline-secondary"><i class="fas fa-microphone"></i> Record</button>
+			<button type="button" stt-target="text" class="ml-1 stt-button btn btn-outline-secondary"><i class="fas fa-microphone-slash"></i> Record</button>
 		</form>
 	</div>
 </div>
