--- a/templates/friend_selector.tmpl
+++ b/templates/friend_selector.tmpl
@@ -1,14 +1,13 @@
-<div class="row form-check form-check-inline">
-	{% for user in friends %}
-	<div class="col-sm-6 col-md-4 col-lg-3">
-		<input class="hidden-checkbox form-check-input" type="checkbox" name="friend" id="checkitem-{{ user._id }}" value="{{ user._id }}" {{ 'checked' if user._id in initial_share else '' }} onchange="update_checkbox(this);return false;">
-		<label class="form-check-label card mb-3" for="checkitem-{{ user._id }}">
-			<img src="{{ user.picture }}" class="card-img-top" alt="{{ user.name|e }}">
-			<div class="card-body">
-				<p class="card-text">{{ user.name|e }}</p>
-			</div>
-			</a>
-		</label>
+<div class="row mb-2">
+	<div class="col">
+		<div class="btn-group-toggle" data-toggle="buttons">
+			{% for user in friends %}
+			<label class="btn border-success btn-success-outline mr-2 mb-2 {{ 'active disabled' if user.selected }}">
+				<input type="checkbox" {{ 'checked disabled' if user.selected }} name="friend" value="{{ user._id }}" autocomplete="off"> 
+				<img src="{{ user.picture }}" class="user-picture" alt="{{ user.name|e }}">
+				{{ user.name|e }}
+			</label>
+			{% endfor %}
+		</div>
 	</div>
-	{% endfor %}
 </div>
