--- a/templates/notification_list.tmpl
+++ b/templates/notification_list.tmpl
@@ -1,20 +1,24 @@
-<div class="row">
+<div class="row mb-3">
 	<div class="col">
-	{% for item in notifications %}
-		<div class="alert {{'alert-info alert-dismissible' if item.new else 'alert-secondary'}}">
-		{% if item.new %}
-		<a href="#" onclick="fetch('/dismiss/{{ item['_id'] }}')" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-		{% endif %}
-		{% if item.type == 'friend request' %}
-			{% include 'notification_friend_request.tmpl' %}
-		{% elif item.type == 'friend accept' %}
-			{% include 'notification_friend_accept.tmpl' %}
-		{% elif item.type == 'shared content' %}
-			{% include 'notification_shared_content.tmpl' %}
-		{% else %}
-		<p> Notification of unsupported type <strong>{{ item['type'] }}</strong>. </p>
-		{% endif %}
-		</div>
-	{% endfor %}
+	{% if notifications|length == 0 %}
+	<p> No new notification at this time. </p>
+	{% else %}
+		{% for item in notifications %}
+			<div class="alert {{'alert-info alert-dismissible' if item.new else 'alert-secondary'}}">
+			{% if item.new %}
+			<a href="#" onclick="fetch('/dismiss/{{ item['_id'] }}')" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+			{% endif %}
+			{% if item.type == 'friend request' %}
+				{% include 'notification_friend_request.tmpl' %}
+			{% elif item.type == 'friend accept' %}
+				{% include 'notification_friend_accept.tmpl' %}
+			{% elif item.type == 'shared content' %}
+				{% include 'notification_shared_content.tmpl' %}
+			{% else %}
+			<p> Notification of unsupported type <strong>{{ item['type'] }}</strong>. </p>
+			{% endif %}
+			</div>
+		{% endfor %}
+	{% endif %}
 	</div>
 </div>
