add videos to db, add playlists, refactor many small details

--- a/templates/friend_selector.tmpl
+++ b/templates/friend_selector.tmpl
@@ -2,7 +2,7 @@
 	<div class="col">
 		<div class="btn-group-toggle" data-toggle="buttons">
 			{% for user in friends %}
-			<label class="btn border-success btn-success-outline mr-2 mb-2 {{ 'active disabled' if user.selected }}">
+			<label class="btn border-light btn-light-outline mr-2 mb-2 {{ 'active disabled' if user.selected }}">
 				<input type="checkbox" {{ 'checked disabled' if user.selected }} name="friend" value="{{ user._id }}" autocomplete="off"> 
 				<img src="{{ user.picture }}" class="user-picture" alt="{{ user.name|e }}">
 				{{ user.name|e }}
