--- a/templates/topbar.tmpl
+++ b/templates/topbar.tmpl
@@ -1,7 +1,15 @@
 <nav class="navbar navbar-light bg-light">
-	<a class="navbar-brand" href="/"> {% if not nologo %} {% include 'logo.tmpl' %} {% endif %}<span class="logo-text">How-To-App </span></a>
+	<a class="navbar-brand" href="/"> 
+		{% if not nologo %} 
+			{% include 'logo.tmpl' %} 
+		{% else %}
+			<span class="logo-text">How-To-App </span>
+		{% endif %}</a>
 	{% if user %}
 		<ul class="nav">
+			<li class="nav-item">
+				<a class="nav-link" href="/search"><i class="fas fa-search"></i> Search</a>
+			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="/friends"><i class="fas fa-user-friends"></i> Friends</a>
 			</li>
@@ -9,17 +17,8 @@
 				<a class="nav-link" href="/shared"><i class="fas fa-share-alt"></i> Shared</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="/favorites"><i class="fas fa-star"></i> Favorites</a>
+				<a class="nav-link" href="/playlists"><i class="fas fa-star"></i> Playlists</a>
 			</li>
-			<!--<li class="nav-item">
-				<a class="nav-link" href="/comments"><i class="far fa-comments"></i> Comments</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="/notifications"><i class="fas fa-check"></i> Notifications</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="/recent"><i class="fas fa-history"></i> Recent</a>
-			</li>-->
 		</ul>
 	<div class="user">
 		<a href="/notifications"><img class="user-picture-sm" src="{{ user['picture'] }}">
@@ -35,19 +34,14 @@
 	{% endif %}
 	</div>
 </nav>
-<div class="row">
-	<div class="col">
-		<nav aria-label="breadcrumb">
-			<ol class="breadcrumb">
-				<li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i> Home</a></li>
-				{% for item in breadcrumb %}
-					{% if item.active %}
-					<li class="breadcrumb-item active" aria-current="page">{{ item.text }}</li>
-					{% else %}
-					<li class="breadcrumb-item"><a href="#">{{ item.text }}</a></li>
-					{% endif %}
-				{% endfor %}
-			</ol>
-		</nav>
-	</div>
-</div>
+<nav aria-label="breadcrumb">
+	<ol class="breadcrumb bg-transparent">
+		{% for item in breadcrumb %}
+			{% if loop.last %}
+			<li class="breadcrumb-item active" aria-current="page"><i class="fas fa-{{ item.icon }}"></i> {{ item.text }}</li>
+			{% else %}
+			<li class="breadcrumb-item"><a href="{{ item.link }}"><i class="fas fa-{{ item.icon }}"></i> {{ item.text }}</a></li>
+			{% endif %}
+		{% endfor %}
+	</ol>
+</nav>
