--- a/templates/comment_list.tmpl
+++ b/templates/comment_list.tmpl
@@ -11,8 +11,8 @@
 				</a>
 				{% endif %}
 				<p> {{ item['text'] }} </p>
-				{% if user['_id'] == item['user_id'] %}
-				<div class="row">
+				{% if False and user['_id'] == item['user_id'] %}
+				<!--<div class="row">
 					<div class="col">
 						<form action="/share/{{ item['_id'] }}" method="get">
 							<button class="btn btn-outline-secondary float-right mb-2" type="submit"><i class="fas fa-share-alt"></i> {{ 'Share' if item.shared_with|count == 0 else 'Shared with' }}
@@ -22,7 +22,7 @@
 							</button>
 						</form>
 					</div>
-				</div>
+				</div>-->
 				{% else %}
 				<div class="float-right mb-2">
 					{% for share_user in item['shared_with'] %}
