--- a/templates/index.html
+++ b/templates/index.html
@@ -12,18 +12,13 @@
 		</div>
 		{% if debug %}
 		<div>
-		<!--<div class="row">-->
-		<p>
-		Debug: 
-			{% for link in ['/debug:users'] %}
-				&nbsp;&nbsp;<a href="{{ link }}">{{ link }}</a>
+			<p>
+			Debug: <ul>
+			{% for link in debug_links %}
+				<li><a href="{{ link }}">{{ link }}</a></li>
 			{% endfor %}
-			{% if user %}
-				{% for link in ['/logout', '/friends', '/comments', '/shared', '/notifications', '/recent', '/personal'] %}
-					&nbsp;&nbsp;<a href="{{ link }}">{{ link }}</a>
-				{% endfor %}
-			{% endif %}
-		</p>
+			</ul>
+			</p>
 		</div>
 		{% endif %}
 	</div>
