--- a/templates/search_results.tmpl
+++ b/templates/search_results.tmpl
@@ -1,16 +1,7 @@
 <div class="row">
-	{% for item in results %}
-	<div class="col-sm-6 col-md-4 col-lg-3">
-		<div class="card mb-3">
-			<a href="/watch/{{ item['videoId'] }}?q={{ query|e }}">
-			<img src="{{ item['thumbnail'] }}" class="card-img-top" alt="{{ item['title']|e }}">
-			{% if title %}
-			<div class="card-body">
-				<p class="card-text">{{ item['title']|e }}</p>
-			</div>
-			{% endif %}
-			</a>
-		</div>
+	{% for video in results %}
+	<div class="col-sm-6 col-md-4 col-lg-3 d-flex align-items-stretch">
+		{% include 'video_preview.tmpl' %}
 	</div>
 	{% endfor %}
 </div>
