--- a/templates/watch.html
+++ b/templates/watch.html
@@ -1,27 +1,25 @@
 {% extends 'base.tmpl' %}
 {% block title %}Watch{% endblock %}
 {% block body %}
-{% include 'search_bar.tmpl' %}
-<div class="row">
+<div class="row mb-4">
 	<div class="col">
-		<div class="embed-responsive embed-responsive-16by9 mb-5">
-			<!--<video src="{{ video_url }}" controls autoplay></video>-->
-			<iframe id="player" 
-							type="text/html" 
-							width="640" 
-							height="390"
-							src="https://www.youtube-nocookie.com/embed/{{ videoId }}?rel=0&showinfo=0"
-							frameborder="0"
-							allow="autoplay"
-							allowfullscreen
-							>
-			</iframe>
+		{% include 'video.tmpl' %}
+		<div class="mt-3">
+			{% if user %}
+				<a class="btn btn-primary" href="/comment/{{ video.video_id }}#form"><i class="fas fa-comment"></i> Add comment</a>
+				{% if folder %}
+					<a class="btn btn-success" href="/set_playlist/{{ video.video_id }}#form"><i class="fas fa-star"></i> {{ folder.name }} </a>
+				{% else %}
+					<a class="btn btn-success" href="/set_playlist/{{ video.video_id }}#form"><i class="fas fa-star"></i> Add to playlist </a>
+				{% endif %}
+			{% endif %}
 		</div>
 	</div>
 </div>
 {% if user %}
-	<h4> Comments </h4>
-	{% include 'comment_list.tmpl' %}
-	{% include 'comment_form.tmpl' %}
+	{% if comments|length > 0 %}
+		<h4> Comments </h4>
+		{% include 'comment_list.tmpl' %}
+	{% endif %}
 {% endif %}
 {% endblock body %}
