fix notifications; add search suggestions

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 {% set nologo = True %}
 {% extends 'base.tmpl' %}
-{% block title %}Search{% endblock %}
+{% block title %}{% endblock %}
+{% block appname %}HowToApp{% endblock %}
 {% block body %}
 <div class="row">
 	<div class="col">
