--- a/templates/search.html
+++ b/templates/search.html
@@ -1,5 +1,5 @@
 {% extends 'base.tmpl' %}
-{% block title %}Search results{% endblock %}
+{% block title %}Search{% endblock %}
 {% block body %}
 	{% include 'search_bar.tmpl' %}
 	{% include 'search_results.tmpl' %}
