--- a/templates/comment.html
+++ b/templates/comment.html
@@ -14,7 +14,7 @@
 				<div class="col mb-3">
 					<div class="form-group">
 						<h3 for="text">What did you learn from this video?</h3>
-						<textarea id="text" name="text" class="form-control" rows="3">{{ text }}</textarea>
+						<textarea id="text" name="text" class="form-control" rows="3" required>{{ text }}</textarea>
 					</div>
 					<button type="button" stt-target="text" class="stt-button btn btn-outline-secondary"><i class="fas fa-microphone-slash"></i> Record</button>
 				</div>
