--- a/templates/notification_friend_accept.tmpl
+++ b/templates/notification_friend_accept.tmpl
@@ -1,7 +1,4 @@
-<img class="user-picture mb-3 mr-3" style="float:left" src="{{ item.data['sender']['picture'] }}">
-<strong>Connected</strong>
-<form action="/friend/accept/{{ item['data']['friend_id'] }}" method="post">
-	<p> You are now connected with <strong>{{ item['data']['sender']['name'] }}</strong> </p>
-	<input type="hidden" name="notification" value="{{ item['_id'] }}">
-
-</form>
+<div>
+<img class="user-picture mb-3 mr-3" src="{{ item.data.sender.picture }}">
+You are now connected with <strong> {{ item.data.sender.name }} </strong>.
+</div>
