--- a/templates/search_bar.tmpl
+++ b/templates/search_bar.tmpl
@@ -3,17 +3,17 @@
 		<form action="/search" method="get">
 			<div class="input-group">
 				<div class="input-group-prepend">
-					<select name="prompt" style="z-index: 2; border-top-right-radius: 0px; border-bottom-right-radius: 0px;" class="custom-select border-secondary" id="inputGroupSelect01" aria-label="Prompt">
+					<select name="prompt" style="z-index: 2; border-top-right-radius: 0px; border-bottom-right-radius: 0px;" class="custom-select border-secondary" id="query-prompt" aria-label="Prompt">
 						<option {{ 'selected' if prompt == '1' }} value="1">How to</option>
 						<option {{ 'selected' if prompt == '2' }} value="2">What is</option>
-						<option {{ 'selected' if prompt == '3' }} value="3">Show me</option>
+						<option {{ 'selected' if prompt == '3' }} value="3">Examples of</option>
 						<option {{ 'selected' if prompt == '4' }} value="4">(no start)</option>
 					</select>
 				</div>
-				<input id="query-field1" type="text" class="form-control border-secondary" autofocus name="q" placeholder="type here" aria-label="Search query" aria-describedby="button-addon1" value="{{ query|e }}">
+				<input id="query-field" autocomplete="off" type="text" class="typeahead form-control border-secondary" autofocus name="q" placeholder="type here" aria-label="Search query" aria-describedby="button-addon1" value="{{ query|e }}">
 				<div class="input-group-append">
-					<button type="button" stt-target="query-field1" class="stt-button btn btn-outline-secondary disabled"><i class="fas fa-microphone-slash"></i></button>
-					<button class="btn btn-outline-secondary" type="submit" id="button-addon1"><i class="fas fa-search"></i> Search</button>
+					<button type="button" stt-target="query-field" class="stt-button btn btn-outline-secondary disabled"><i class="fas fa-microphone-slash"></i></button>
+					<button class="btn btn-outline-secondary" type="submit" id="button-addon1"><i class="fas fa-search"></i> <span class="d-none d-md-inline">Search</span></button>
 				</div>
 			</div>
 			<div class="float-right mt-1">
