--- a/templates/set_playlist.html
+++ b/templates/set_playlist.html
@@ -21,7 +21,7 @@
 				<h3>Or create a new one</h3>
 				<input type="text" class="form-control" name="new_name">
 			</div>
-			<button type="submit" class="btn btn-primary"><i class="fas fa-star"></i> Save</button>
+			<button type="submit" class="btn btn-primary mr-3"><i class="fas fa-star"></i> Save</button>
 			<a href="javascript:window.history.back()" class="btn btn-danger"><i class="fas fa-times"></i> Cancel</a>
 		</form>
 	</div>
