--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}{% endblock %}
 {% block appname %}HowToApp{% endblock %}
 {% block body %}
-<div class="row">
+<div style="margin-bottom: 30%" class="row">
 	<div class="col">
 		<div style="font-size: 500%; text-align: center; margin-top: 10%; margin-bottom: 1rem;">
 			{% include 'logo.tmpl' %}
