--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="row">
 {% for folder in folders %}
-	<div class="col-3">
+	<div class="col-sm-6 col-md-4 col-lg-3">
 		<div class="card mb-3">
 			<a href="/playlists/{{ folder._id }}">
 			<div class="card-img-4">
