--- a/templates/comment_form.tmpl
+++ b/templates/comment_form.tmpl
@@ -4,10 +4,12 @@
 		<form action="/comment/{{ videoId }}" method="post">
 			<div class="form-group">
 				<h4 for="text">What did you learn from this video?</h4>
-				<textarea id="text" name="text" class="form-control" rows="3" autofocus>{{ text }}</textarea>
+				<div class="stt-textarea">
+					<textarea id="text" name="text" class="form-control" rows="3" autofocus>{{ text }}</textarea>
+					<button type="button" stt-target="text" class="stt-button btn disabled"><i class="fas fa-microphone-slash"></i></button>
+				</div>
 			</div>
 			<button type="submit" class="btn btn-primary"><i class="fas fa-pen"></i> Save</button>
-			<button type="button" stt-target="text" class="ml-1 stt-button btn btn-outline-secondary"><i class="fas fa-microphone-slash"></i> Record</button>
 		</form>
 	</div>
 </div>
