--- a/templates/friend_request.html
+++ b/templates/friend_request.html
@@ -12,8 +12,8 @@
 					<div class="card-body">
 						<h3> Do you want to be friend with {{ friend.name }}? </h3>
 						<p class="name"><i class="far fa-envelope"></i> <strong>Email:</strong> {{ friend.email }}</p>
-						<a href="/friend/accept/{{ request_id }}" class="btn btn-primary mr-3"> <i class="fas fa-user-friends"></i> Accept </a>
-						<a href="/notifications" class="btn btn-danger"><i class="fas fa-times"></i> Reject</a>
+						<a href="/friend/accept/{{ request_id }}" class="btn btn-primary mr-3 mb-2"> <i class="fas fa-user-friends"></i> Accept </a>
+						<a href="/notifications" class="btn btn-danger mb-2"><i class="fas fa-times"></i> Reject</a>
 					</div>
 				</div>
 			</div>
