--- a/templates/search.html
+++ b/templates/search.html
@@ -3,4 +3,5 @@
 {% block body %}
 	{% include 'search_bar.tmpl' %}
 	{% include 'search_results.tmpl' %}
+	<div class="arrow-prompt show-idle-prompt"><i class="fas fa-arrow-down"></i></div>
 {% endblock body %}
