--- a/templates/topbar.tmpl
+++ b/templates/topbar.tmpl
@@ -8,16 +8,19 @@
 	{% if user %}
 		<ul class="nav">
 			<li class="nav-item">
-				<a class="nav-link" href="/search"><i class="fas fa-search"></i> Search</a>
+				<a class="nav-link" href="/search"><i class="fas fa-search"></i> <span class="d-none d-md-inline">Search</span></a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="/friends"><i class="fas fa-user-friends"></i> Friends</a>
+				<a class="nav-link" href="/friends"><i class="fas fa-user-friends"></i> <span class="d-none d-md-inline">Friends</span></a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="/shared"><i class="fas fa-share-alt"></i> Shared</a>
+				<a class="nav-link" href="/shared"><i class="fas fa-share-alt"></i> <span class="d-none d-md-inline">Shared</span></a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="/playlists"><i class="fas fa-star"></i> Playlists</a>
+				<a class="nav-link" href="/playlists"><i class="fas fa-star"></i> <span class="d-none d-md-inline">Playlists</span></a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="/logout"> <i class="fas fa-sign-out-alt"></i> <span class="d-none d-md-inline">Logout</span> </a>
 			</li>
 		</ul>
 	<div class="user">
