--- a/templates/search_bar.tmpl
+++ b/templates/search_bar.tmpl
@@ -1,19 +1,21 @@
 <div class="row">
 	<div class="col mb-3">
 		<form action="/search" method="get">
-			<div class="input-group">
+			<div class="input-group show-idle-prompt">
 				<div class="input-group-prepend">
-					<select name="prompt" style="z-index: 2; border-top-right-radius: 0px; border-bottom-right-radius: 0px;" class="custom-select border-secondary" id="query-prompt" aria-label="Prompt">
+					<select name="prompt" style="border-top-right-radius: 0px; border-bottom-right-radius: 0px;" class="prompt-select custom-select border-secondary" id="query-prompt" aria-label="Prompt">
 						<option {{ 'selected' if prompt == '1' }} value="1">How to</option>
 						<option {{ 'selected' if prompt == '2' }} value="2">What is</option>
 						<option {{ 'selected' if prompt == '3' }} value="3">Examples of</option>
 						<option {{ 'selected' if prompt == '4' }} value="4">(no start)</option>
 					</select>
 				</div>
-				<input id="query-field" autocomplete="off" type="text" class="typeahead form-control border-secondary" autofocus name="q" placeholder="type here" aria-label="Search query" aria-describedby="button-addon1" value="{{ query|e }}">
+				<div class="stt-input form-control border-0">
+					<input id="query-field" autocomplete="off" type="text" class="stt-field typeahead" autofocus name="q" placeholder="type here" aria-label="Search query" aria-describedby="search-button" value="{{ query|e }}">
+					<button type="button" stt-target="query-field" class="stt-button btn disabled"><i class="fas fa-microphone-slash"></i></button>
+				</div>
 				<div class="input-group-append">
-					<button type="button" stt-target="query-field" class="stt-button btn btn-outline-secondary disabled"><i class="fas fa-microphone-slash"></i></button>
-					<button class="btn btn-outline-secondary" type="submit" id="button-addon1"><i class="fas fa-search"></i> <span class="d-none d-md-inline">Search</span></button>
+					<button class="btn btn-outline-secondary" type="submit" id="search-button"><i class="fas fa-search"></i> <span class="d-none d-md-inline">Search</span></button>
 				</div>
 			</div>
 			<div class="float-right mt-1">
