--- a/templates/search_results.tmpl
+++ b/templates/search_results.tmpl
@@ -1,6 +1,6 @@
 <div class="row">
 	{% for video in results %}
-	<div class="col-sm-6 col-md-4 col-lg-3 d-flex align-items-stretch">
+	<div class="col-sm-6 col-md-4 col-lg-3 d-flex align-items-stretch {{ 'show-idle-prompt' if loop.index == 1 }}">
 		{% include 'video_preview.tmpl' %}
 	</div>
 	{% endfor %}
