--- a/templates/watch.html
+++ b/templates/watch.html
@@ -6,11 +6,11 @@
 		{% include 'video.tmpl' %}
 		<div class="mt-3">
 			{% if user %}
-				<a class="btn btn-primary mr-3" href="/comment/{{ video.video_id }}#form"><i class="fas fa-comment"></i> Add comment</a>
+				<a class="btn btn-primary mr-3 mb-2" href="/comment/{{ video.video_id }}#form"><i class="fas fa-comment"></i> Add comment</a>
 				{% if folder %}
-					<a class="btn btn-success" href="/set_playlist/{{ video.video_id }}#form"><i class="fas fa-star"></i> {{ folder.name }} </a>
+					<a class="btn btn-success mb-2" href="/set_playlist/{{ video.video_id }}#form"><i class="fas fa-star"></i> {{ folder.name }} </a>
 				{% else %}
-					<a class="btn btn-success" href="/set_playlist/{{ video.video_id }}#form"><i class="fas fa-star"></i> Add to playlist </a>
+					<a class="btn btn-success mb-2" href="/set_playlist/{{ video.video_id }}#form"><i class="fas fa-star"></i> Add to playlist </a>
 				{% endif %}
 			{% endif %}
 		</div>
