--- a/templates/search_bar.tmpl
+++ b/templates/search_bar.tmpl
@@ -19,7 +19,7 @@
 				</div>
 			</div>
 			<div class="float-right mt-1">
-				<input class="form-check-input" name="channel_only" type="checkbox" id="defaultCheck1" aria-label="Limit to Endeavour channel" {{ 'checked' if channel_only }}>
+				<input class="form-check-input" name="channel_only" type="checkbox" id="defaultCheck1" aria-label="Limit to Endeavour channel" {{ 'checked' if channel_only == 'on' }}>
 				<label class="form-check-label" for="defaultCheck1">
 					Endeavour channel
 				</label>
