--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,10 @@
+/* ============= colors =========== */
+:root {
+  --color-search: #645AA5; 
+  --color-friends: #8E3B88; 
+  --color-playlists: #E8314F; 
+  --color-notifications: #F47726; 
+}
 /* ============= logo ============= */
 .logo-text {
 	color: #645AA5;
@@ -180,7 +187,7 @@
 
 .bubble-text a {
 	text-decoration: none;
-	color: var(--black);
+	color: var(--dark);
 }
 
 /* ================ search bar =============== */
@@ -206,6 +213,13 @@
 
 .card-img-4 img:nth-child(2) {
 	border-top-right-radius: calc(.25rem - 1px);
+}
+
+.no-decoration:hover {
+	text-decoration: none;
+}
+.no-decoration {
+	color: var(--dark);
 }
 
 /* =================== prompts ================= */
@@ -276,4 +290,58 @@
     opacity: 0;
     text-shadow: 0 0 0 transparent;
   }
+}
+
+/* =================== navbar ================= */
+
+.nav-item {
+	font-size: 200%;
+	border: 1px solid rgba(0, 0, 0, .25);
+	border-radius: .25rem;
+	margin-left: .5rem;
+	margin-right: .5rem;
+	padding-left: .5rem;
+	padding-right: .5rem;
+}
+
+.nav-user-picture {
+	max-width: 4.125rem;
+	max-height: 4.125rem;
+	border-radius: 50%;
+	background: var(--warning);
+}
+
+.notification-count {
+	font-size: 40%;
+	position: relative;
+	margin-left: -11px;
+	top: 8px;
+	left: -2px;
+	border: 1px solid #f8f9fa!important;
+	--background-color: var(--color-notifications);
+}
+
+.nav-item.active:nth-child(2) {
+	border-color: var(--color-search) !important;
+}
+.nav-item.active:nth-child(2) > .nav-link {
+	color: var(--color-search) !important;
+}
+.nav-item.active:nth-child(3) {
+	border-color: var(--color-friends) !important;
+}
+.nav-item.active:nth-child(3) > .nav-link {
+	color: var(--color-friends) !important;
+}
+.nav-item.active:nth-child(4) {
+	border-color: var(--color-playlists) !important;
+}
+.nav-item.active:nth-child(4) > .nav-link {
+	color: var(--color-playlists) !important;
+}
+.nav-item.active:nth-child(5) {
+	border-color: var(--color-notifications) !important;
+}
+.nav-item.active:nth-child(5) > .nav-link {
+	color: var(--color-notifications) !important;
 }
