--- a/templates/comment_list.tmpl
+++ b/templates/comment_list.tmpl
@@ -1,5 +1,6 @@
 <div class="row">
 	<div class="col">
+	{% if comments|length > 0 %}
 		{% for item in comments %}
 		<div class="card border-0">
 			<a name="{{ item._id }}"></a>
@@ -27,5 +28,8 @@
 			</div>
 		</div>
 		{% endfor %}
+	{% else %}
+		<h2>No comment</h2>
+	{% endif %}
 	</div>
 </div>
