--- a/templates/friend_list.tmpl
+++ b/templates/friend_list.tmpl
@@ -3,14 +3,14 @@
 	<div class="col-sm-6 col-md-4 col-lg-3">
 		<div class="card mb-3">
 			{% if item.href %}
-			<a href="{{ item['href'] }}">
+			<a href="{{ item.href }}">
 			{% endif %}
-				<img src="{{ item['picture'] }}" class="card-img-top" alt="{{ item['name']|e }}">
+				<img src="{{ item.picture }}" class="card-img-top" alt="{{ item.name }}">
 			{% if item.href %}
 			</a>
 			{% endif %}
 			<div class="card-body">
-				<p class="card-text">{{ item['name']|e }}</p>
+				<p class="card-text">{{ item.name }}</p>
 			</div>
 			</a>
 		</div>
