--- a/templates/login.html
+++ b/templates/login.html
@@ -17,10 +17,28 @@
 				<input class="form-control" id="password" type="password" name="password" placeholder="password" required>
 			</div>
 			<div class="form-group">
-				<button class="btn btn-primary" id="submit" type="submit"> <i class="fas fa-sign-in-alt"></i> Login </button>
+				<button class="btn btn-primary mr-2" id="submit" type="submit"> <i class="fas fa-sign-in-alt"></i> Login </button>
 				or create a <a class="ml-1" href="/user"><i class="fas fa-user-plus"></i> New user </a>
 			</div>
 		</form>
 	</div>
 </div>
+{% if debug %}
+<h1 class="mt-5">Debug</h1>
+<div class="row">
+	{% for item in users %}
+	<div class="col-sm-6 col-md-4 col-lg-3">
+		<div class="card mb-3">
+			<a href="{{ item.href }}">
+				<img src="{{ item.picture }}" class="card-img-top" alt="{{ item.name }}">
+			</a>
+			<div class="card-body">
+				<p class="card-text">{{ item.name }}</p>
+			</div>
+			</a>
+		</div>
+	</div>
+	{% endfor %}
+</div>
+{% endif %}
 {% endblock body %}
