--- a/templates/login.html
+++ b/templates/login.html
@@ -10,15 +10,15 @@
 			{% endif %}
 			<div class="form-group">
 				<label for="email"> <i class="far fa-envelope"></i> Email </label>
-				<input class="form-control" id="email" type="email" name="email" value="{{ email|e }}" placeholder="Enter email" required>
+				<input class="form-control" id="email" type="email" name="email" value="{{ email|e }}" placeholder="Enter your email" required>
 			</div>
 			<div class="form-group">
 				<label for="password"> <i class="fas fa-key"></i> Password </label>
-				<input class="form-control" id="password" type="password" name="password" placeholder="password" required>
+				<input class="form-control" id="password" type="password" name="password" placeholder="Enter your password" required>
 			</div>
 			<div class="form-group">
 				<button class="btn btn-primary mr-2" id="submit" type="submit"> <i class="fas fa-sign-in-alt"></i> Login </button>
-				or create a <a class="ml-1" href="/user"><i class="fas fa-user-plus"></i> New user </a>
+				<!--or create a <a class="ml-1" href="/user"><i class="fas fa-user-plus"></i> New user </a>-->
 			</div>
 		</form>
 	</div>
