--- a/templates/new_user.html
+++ b/templates/new_user.html
@@ -4,28 +4,31 @@
 <div class="row">
 	<div class="col">
 		<h1>New user</h1>
-		<form action="/user" method="post">
-			{% if error %}
-			<div class="alert alert-danger">Error: {{ error }} </div>
-			{% endif %}
+		<form action="/user" method="post" accept-charset="utf-8" enctype="multipart/form-data">
 			<div class="form-group">
 				<label for="email"> <i class="far fa-envelope"></i> Email </label>
-				<input class="form-control" id="email" type="email" name="email" value="{{ email|e }}" placeholder="Enter email" required>
+				<input class="form-control" id="email" type="email" name="email" value="{{ email }}" placeholder="Enter your email address" required>
 			</div>
 			<div class="form-group">
 				<label for="name"> <i class="fas fa-user"></i> Name </label>
-				<input class="form-control" id="name" type="text" name="name" value="{{ name|e }}" placeholder="Enter name" required>
+				<input class="form-control" id="name" type="text" name="name" value="{{ name }}" placeholder="Enter your name" required>
 			</div>
-			<div class="form-group">
-				<label for="picture"> <i class="fas fa-camera"></i> Profile picture </label>
+			<!--<div class="form-group">
 				<input class="form-control" id="picture" type="url" name="picture" value="{{ picture|e }}" placeholder="Enter picture url">
+			</div>-->
+			<div class="form-group">
+				<label for="picture-chooser"> <i class="fas fa-camera"></i> Profile picture </label>
+			<div class="custom-file" id="picture-chooser">
+				<input name="picture" type="file" accept="image/*" class="custom-file-input" id="picture-file">
+				<label class="custom-file-label" for="picture-file">Choose among your pictures...</label>
+			</div>
 			</div>
 			<div class="form-group">
 				<label for="password"> <i class="fas fa-key"></i> Password </label>
-				<input class="form-control" id="password" type="password" name="password" placeholder="password" required>
+				<input class="form-control" id="password" type="password" name="password" placeholder="Choose a password" required>
 			</div>
 			<div class="form-group">
-				<button class="btn btn-primary" id="submit" type="submit">Create</button>
+				<button class="btn btn-primary" id="submit" type="submit"><i class="fa fa-user-plus"></i> Create</button>
 			</div>
 		</form>
 	</div>
