--- a/templates/topbar.tmpl
+++ b/templates/topbar.tmpl
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
+<nav class="navbar navbar-expand navbar-light bg-light">
   <!--<a class="navbar-brand" href="#">How-to-app</a>-->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -9,7 +9,7 @@
 				<a class="nav-link" href="javascript:window.history.back()" title="Back"><i class="fas fa-arrow-left"></i><span class="sr-only">Back</span></a>
       </li>
       <li class="nav-item {{ 'active' if nav == 'search' }}">
-				<a class="nav-link" href="/" title="Search"><i class="fas fa-search"></i><span class="sr-only">Search</span></a>
+				<a class="nav-link" href="/" title="Search"><i class="fas fa-search"></i><i style="position:relative;margin-right:-1em; left: -42px; top: 16px; font-size: 50%;" class="fas fa-home"></i><span class="sr-only">Search</span></a>
       </li>
 			{% if user %}
 			<li class="nav-item {{ 'active' if nav == 'friends' }}">
@@ -35,6 +35,9 @@
     <ul class="navbar-nav">
 			<li class="nav-item">
 				<a class="nav-link" href="/login" title="Login"><i class="fas fa-sign-in-alt"></i><span class="sr-only">Login</span></a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="/user" title="New user"><i class="fas fa-user-plus"></i><span class="sr-only">New user</span></a>
 			</li>
 		</ul>
 		{% endif %}
