--- a/templates/login.html
+++ b/templates/login.html
@@ -27,7 +27,7 @@
 <h1 class="mt-5">Debug</h1>
 <div class="row">
 	{% for item in users %}
-	<div class="col-sm-6 col-md-4 col-lg-3">
+	<div class="col-sm-6 col-md-4 col-lg-3 align-items-stretch">
 		<div class="card mb-3">
 			<a href="{{ item.href }}">
 				<img src="{{ item.picture }}" class="card-img-top" alt="{{ item.name }}">
