--- a/templates/set_playlist.html
+++ b/templates/set_playlist.html
@@ -7,19 +7,19 @@
 	</div>
 </div>
 <div class="row">
-	<div class="col-4">
+	<div class="col">
 		<a name="playlist"></a>
 		<form action="/set_playlist/{{ video.video_id }}" method="post">
 			<div class="mb-3">
 				<h3>Add to existing playlist</h3>
-				<select name="folder" class="custom-select border-secondary" id="inputGroupSelect01" aria-label="Playlist">
+				<select name="folder" class="custom-select border-secondary fas mb-3" id="inputGroupSelect01" aria-label="Playlist">
 					<option value="" selected>Select playlist name</option>
 					{% for folder in folders %}
-					<option value="{{ folder._id }}"> {{ folder.name }} </option>
+					<option value="{{ folder._id }}" class="fas">  {{ folder.name }} </option>
 					{% endfor %}
 				</select>
-				<h3>Or create a new one</h3>
-				<input type="text" class="form-control" name="new_name">
+				<h3>Or create a new playlist</h3>
+				<input type="text" class="form-control" name="new_name" placeholder="Type playlist name here">
 			</div>
 			<button type="submit" class="btn btn-primary mr-3 mb-2"><i class="fas fa-star"></i> Save</button>
 			<a href="/watch/{{ video.video_id }}" class="btn btn-danger mb-2"><i class="fas fa-times"></i> Cancel</a>
