--- a/templates/friend_list.tmpl
+++ b/templates/friend_list.tmpl
@@ -1,6 +1,6 @@
 <div class="row">
 	{% for item in friends %}
-	<div class="col-sm-6 col-md-4 col-lg-3">
+	<div class="col-sm-6 col-md-4 col-lg-3 align-items-stretch">
 		<div class="card mb-3">
 			{% if item.href %}
 			<a href="{{ item.href }}">
