--- a/templates/new_user.html
+++ b/templates/new_user.html
@@ -4,7 +4,7 @@
 <div class="row">
 	<div class="col">
 		<h1>New user</h1>
-		<form action="/user" method="post" accept-charset="utf-8" enctype="multipart/form-data">
+		<form action="/new-user" method="post" accept-charset="utf-8" enctype="multipart/form-data">
 			<div class="form-group">
 				<label for="email"> <i class="far fa-envelope"></i> Email </label>
 				<input class="form-control" id="email" type="email" name="email" value="{{ email }}" placeholder="Enter your email address" required>
@@ -13,9 +13,6 @@
 				<label for="name"> <i class="fas fa-user"></i> Name </label>
 				<input class="form-control" id="name" type="text" name="name" value="{{ name }}" placeholder="Enter your name" required>
 			</div>
-			<!--<div class="form-group">
-				<input class="form-control" id="picture" type="url" name="picture" value="{{ picture|e }}" placeholder="Enter picture url">
-			</div>-->
 			<div class="form-group">
 				<label for="picture-chooser"> <i class="fas fa-camera"></i> Profile picture </label>
 			<div class="custom-file" id="picture-chooser">
