--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -1,6 +1,7 @@
 {% extends 'base.tmpl' %}
 {% block title %}Folder{% endblock %}
 {% block body %}
+<h3> <i class="fas fa-star"></i> {{ folder.name }} </h3>
 {% set results = folder.videos %}
 {% include 'search_results.tmpl' %}
 {% endblock body %}
