--- a/templates/search_results.tmpl
+++ b/templates/search_results.tmpl
@@ -1,7 +1,20 @@
 <div class="row">
-	{% for video in results %}
-	<div class="col-sm-6 col-md-4 col-lg-3 d-flex align-items-stretch {{ 'show-idle-prompt' if loop.index == 1 }}">
-		{% include 'video_preview.tmpl' %}
+	{% if results|length == 0 and query != '' %}
+	<div class="col">
+		<h3> No video found </h3>
 	</div>
-	{% endfor %}
+	{% else %}
+		{% for video in results %}
+		<div class="col-sm-6 col-md-4 col-lg-3 align-items-stretch">
+			<div class="card mb-3 {{ 'show-idle-prompt' if loop.index == 1 }}">
+				<a class="no-decoration" href="/watch/{{ video.video_id }}?q={{ query }}&prompt={{ prompt }}&folder={{ folder._id if folder }}">
+				<img class="card-img-top" src="{{ video.thumbnail }}">
+				<div class="card-body">
+					{{ video.title|safe }}
+				</div>
+				</a>
+			</div>
+		</div>
+		{% endfor %}
+	{% endif %}
 </div>
