--- a/templates/topbar.tmpl
+++ b/templates/topbar.tmpl
@@ -30,14 +30,14 @@
   </div>
   <div class="float-right">
 		{% if user %}
-			<a href="/logout" title="User"><img class="nav-user-picture" src="{{ user.picture }}"><span class="sr-only">User</span></a>
+			<a href="/user" title="User"><img class="nav-user-picture" src="{{ user.picture }}"><span class="sr-only">User</span></a>
 		{% else %}
     <ul class="navbar-nav">
 			<li class="nav-item">
 				<a class="nav-link" href="/login" title="Login"><i class="fas fa-sign-in-alt"></i><span class="sr-only">Login</span></a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="/user" title="New user"><i class="fas fa-user-plus"></i><span class="sr-only">New user</span></a>
+				<a class="nav-link" href="/new-user" title="New user"><i class="fas fa-user-plus"></i><span class="sr-only">New user</span></a>
 			</li>
 		</ul>
 		{% endif %}
