--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -1,19 +1,20 @@
 {% extends 'base.tmpl' %}
 {% block title %}Users{% endblock %}
 {% block body %}
+<div class="row"><div class="col">
 <div class="row">
 	{% for item in users %}
-	<div class="col-sm-6 col-md-4 col-lg-3">
+	<div class="col-sm-6 col-md-4 col-lg-3 align-items-stretch">
 		<div class="card mb-3">
-			<a href="{{ item['href'] }}">
-				<img src="{{ item['picture'] }}" class="card-img-top" alt="{{ item['name']|e }}">
-			</a>
-			<div class="card-body">
-				<p class="card-text">{{ item['name']|e }}</p>
-			</div>
+			<a href="{{ item.href }}">
+				<img src="{{ item.picture }}" class="card-img-top" alt="{{ item.name }}">
+				<div class="card-body">
+					{{ item.name }}
+				</div>
 			</a>
 		</div>
 	</div>
 	{% endfor %}
 </div>
+</div></div>
 {% endblock body %}
