--- a/templates/videos.html
+++ b/templates/videos.html
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="row">
 {% for video in videos %}
-	<div class="col-sm-6 col-md-4 col-lg-3">
+	<div class="col-sm-6 col-md-4 col-lg-3 align-items-stretch">
 		{% include 'video_preview.tmpl' %}
 	</div>
 {% endfor %}
