--- a/templates/user.html
+++ b/templates/user.html
@@ -29,7 +29,7 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<button class="btn btn-primary" id="submit" type="submit"><i class="fa fa-camera"></i> Change picture</button>
+				<button class="btn btn-primary" type="submit"><i class="fa fa-camera"></i> Change picture</button>
 			</div>
 		</form>
 		<form action="/user/change-password" method="post">
@@ -42,7 +42,7 @@
 				<input class="form-control" id="new_password" type="password" name="new_password" placeholder="Choose a new password" required>
 			</div>
 			<div class="form-group">
-				<button class="btn btn-primary" id="submit" type="submit"><i class="fa fa-key"></i> Change password</button>
+				<button class="btn btn-primary" type="submit"><i class="fa fa-key"></i> Change password</button>
 			</div>
 		</form>
 	</div>
